--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "eslint-config-airbnb-base": "15.0.0",
     "eslint-plugin-import": "2.31.0",
     "stylelint": "16.19.1",
-    "stylelint-config-standard": "38.0.0"
-  }
+    "stylelint-config-standard": "38.0.0",
+    "@adobe/aem-cli": "^16.10.25"
+  },
+  "packageManager": "pnpm@10.11.0+sha512.6540583f41cc5f628eb3d9773ecee802f4f9ef9923cc45b69890fb47991d4b092964694ec3a4f738a420c918a333062c8b925d312f42e4f0c263eb603551f977"
 }
