--- a/fstab.yaml
+++ b/fstab.yaml
@@ -1,2 +1,3 @@
 mountpoints:
   /: https://drive.google.com/drive/folders/1bWW3iY12bbJ9IfRU1_cHOTfLae4Z2Ppg
+  /about: https://drive.google.com/drive/folders/1HQ_kMwpFYDjObIeAxI-tYoUFlFD5XTYv
